--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,9 @@
 [submodule "private_utils"]
 	path = private_utils
 	url = https://github.com/orrappelkroyzer/private_utils.git
+[submodule "create_db_tools"]
+	path = create_db_tools
+	url = https://github.com/orrappelkroyzer/create_db_tools.git
+[submodule "ballpatents"]
+	path = ballpatents
+	url = https://github.cs.huji.ac.il/dshahaf/ballpatents.git
