--- a/config.json
+++ b/config.json
@@ -2,5 +2,6 @@
     "db_dir" : "C:\\Users\\orkro\\Dropbox\\Documents\\Work\\Academia\\My research\\udi_sommer\\input",
     "output_dir" : "C:\\Users\\orkro\\Dropbox\\Documents\\Work\\Academia\\My research\\udi_sommer\\output\\ballpark",
     "temp_filename" : "fake",
+    "downloads_path" : "C:\\Users\\orkro\\Downloads",
     "gis_dir" : "C:\\Users\\orkro\\Dropbox\\Documents\\Work\\Academia\\My research\\udi_sommer\\input\\GIS"
 }
